# visao-computacional_ros

install/: local_setup.sh  setup.sh
install/turtle_draw/lib/turtle_draw/: draw_turtle
install/turtle_draw/share/turtle_draw/: package.dsv  package.ps1  package.sh
src/: README
src/turtle_draw/: package.xml  points.txt  setup.py
src/turtle_draw/turtle_draw/: draw_turtle.py  image_to_points.py
