<?xml version="1.0"?>
<package format="3">

  <name>turtle_draw</name>
  <version>0.0.0</version>

  <description>Turtle Draw Project</description>

  <maintainer email="rafael@email.com">
    rafael
  </maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>turtlesim_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>